@@ -2726,7 +2726,7 @@ See ZAPPERMASKS for more information on zapper mask syntax.
 PROP_WEAROVERRIDE=\
 Property   : Prop_WearOverride\n\r\
 Targets    : Items\n\r\
-Parameters : masking parameters described below\n\r\
+Parameters : (DRESS) (CONTENTS) ([masking params])\n\r\
 Example    : -class +mage -race +elf -evil\n\r\
 Description: \n\r\
 Whenever the owner of the item with this property tries to wear or wield the \
@@ -2735,7 +2735,9 @@ Additionally, if they are permitted, then any wear restrictions that would \
 normally prevent them from wearing the item will be suspended until the \
 item is removed.  This is so that you can make special armor for creatures \
 that normally can't wear standard gear, such as barding for horse backs, and \
-so forth.\n\r\
+so forth.  The DRESS argument will allow the item to be dressed or undressed \
+from a creature without regard to normal permission rules. The CONTENTS parm \
+allows the contents to be seen or manipulated.  \n\r\
 For valid masking parameters \
 see AHELP ZAPPERMASK, where allowed can wear, and disallowed is not. 
 
