@@ -42,10 +42,10 @@ small % waterskin	6	10	5	90	GenEmptyDrink		25		1
 % trenchcoat	12	30	32	4276	GenArmor	1:BODY	20	2	0	
 % hauberk	12	40	24	1908	GenArmor	1:TORSO	0	7	0	
 % coat	13	40	24	1923	GenArmor	1:TORSO	5	7	0	
-% saddle	19	60	32	1309	GenArmor	S4:BACK	0	4	0	prop_wearoverride;-racecat +equine
-% barding	17	120	128	16639	GenArmor	2:BODY	0	32	0	prop_wearoverride;-racecat +equine
-% chanfron	18	90	32	1249	GenArmor	2:HEAD	0	4	0	prop_wearoverride;-racecat +equine
-% saddlebags	15	30	8	225	GenArmor	S2:BACK	250	0	0	prop_wearoverride;-racecat +equine
+% saddle	19	60	32	1309	GenArmor	S4:BACK	0	4	0	prop_wearoverride;DRESS -racecat +equine
+% barding	17	120	128	16639	GenArmor	2:BODY	0	32	0	prop_wearoverride;DRESS -racecat +equine
+% chanfron	18	90	32	1249	GenArmor	2:HEAD	0	4	0	prop_wearoverride;DRESS -racecat +equine
+% saddlebags	15	30	8	225	GenArmor	S2:BACK	250	0	0	prop_wearoverride;DRESS CONTENTS -racecat +equine
 large % waterskin	9	20	8	130	GenEmptyDrink		50		1	
 % loincloth	1	15	3	21	GenArmor	S0:WAIST	0	2	0	
 % bullwhip	8	20	12	190	GenWeapon	FLAILED	1	8	1	
