@@ -16,6 +16,7 @@
  15. New Spell "Majesty", the effects of which can only be wished for.
  16. Prop_ShortEffects expanded to include remotely-cast effects also.
  17. ACCOUNT command can now show chars with waiting mail, or missed tells.
+ 18. Prop_WearAdjuster allows dressing and content manipulation, from outside (saddlebags).
 
 # Build 5.10.1 Release 1/01/2023
   1. FasterRecovery expanded and new char stat REJUVRATE for Prop*Adjuster
